// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar snapshot renders correctly 1`] = `
<div
  class="za-search-bar za-search-bar--round"
>
  <form
    action="#"
    class="za-search-bar__form"
  >
    <div
      class="za-search-bar__content"
    >
      <i
        class="za-icon za-search-bar__icon za-icon--default za-icon--sm"
        theme="default"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1000 1000"
          width="1em"
        >
          <path
            d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
            fill-rule="nonzero"
          />
        </svg>
      </i>
      <div
        class="za-search-bar__mock"
      >
        <div
          class="za-input za-search-bar__input za-input--clearable"
        >
          <input
            autocomplete="off"
            placeholder="搜索"
            type="search"
            value=""
          />
          <i
            class="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
            theme="default"
            type="wrong-round-fill"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#wrong-round-fill"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="za-search-bar__cancel"
    >
      取消
    </div>
  </form>
</div>
`;

exports[`SearchBar snapshot renders defaultValue correctly 1`] = `
<ForwardRef(forwardRef)
  cancelText="取消"
  defaultValue="搜索关键字"
  placeholder="搜索"
  shape="round"
>
  <ConfigReceiver
    cancelText="取消"
    defaultValue="搜索关键字"
    forwardedRef={null}
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      cancelText="取消"
      clearable={true}
      defaultValue="搜索关键字"
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <ForwardRef(SvgSearch)
              className="za-search-bar__icon"
              size="sm"
            >
              <Icon
                className="za-search-bar__icon"
                component={[Function]}
                prefixCls="za-icon"
                size="sm"
                theme="default"
                viewBox="0 0 32 32"
              >
                <i
                  className="za-icon za-search-bar__icon za-icon--default za-icon--sm"
                  size="sm"
                  theme="default"
                >
                  <component
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 1000 1000"
                      width="1em"
                    >
                      <path
                        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
                        fillRule="nonzero"
                      />
                    </svg>
                  </component>
                </i>
              </Icon>
            </ForwardRef(SvgSearch)>
            <div
              className="za-search-bar__mock"
            >
              <InputBase
                className="za-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="za-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="za-input za-search-bar__input za-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="za-input__clear"
                    onClick={[Function]}
                    prefixCls="za-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                        onClick={[Function]}
                        prefixCls="za-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar snapshot renders onCancel called correctly 1`] = `
<ForwardRef(forwardRef)
  onCancel={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <ConfigReceiver
    forwardedRef={null}
    onCancel={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onCancel={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <ForwardRef(SvgSearch)
              className="za-search-bar__icon"
              size="sm"
            >
              <Icon
                className="za-search-bar__icon"
                component={[Function]}
                prefixCls="za-icon"
                size="sm"
                theme="default"
                viewBox="0 0 32 32"
              >
                <i
                  className="za-icon za-search-bar__icon za-icon--default za-icon--sm"
                  size="sm"
                  theme="default"
                >
                  <component
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 1000 1000"
                      width="1em"
                    >
                      <path
                        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
                        fillRule="nonzero"
                      />
                    </svg>
                  </component>
                </i>
              </Icon>
            </ForwardRef(SvgSearch)>
            <div
              className="za-search-bar__mock"
            >
              <InputBase
                className="za-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="za-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="za-input za-search-bar__input za-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="za-input__clear"
                    onClick={[Function]}
                    prefixCls="za-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                        onClick={[Function]}
                        prefixCls="za-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar snapshot renders onChange called correctly 1`] = `
<ForwardRef(forwardRef)
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "测试值",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <ConfigReceiver
    forwardedRef={null}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "测试值",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "测试值",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round za-search-bar--focus"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <ForwardRef(SvgSearch)
              className="za-search-bar__icon"
              size="sm"
            >
              <Icon
                className="za-search-bar__icon"
                component={[Function]}
                prefixCls="za-icon"
                size="sm"
                theme="default"
                viewBox="0 0 32 32"
              >
                <i
                  className="za-icon za-search-bar__icon za-icon--default za-icon--sm"
                  size="sm"
                  theme="default"
                >
                  <component
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 1000 1000"
                      width="1em"
                    >
                      <path
                        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
                        fillRule="nonzero"
                      />
                    </svg>
                  </component>
                </i>
              </Icon>
            </ForwardRef(SvgSearch)>
            <div
              className="za-search-bar__mock"
            >
              <InputBase
                className="za-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="za-input"
                readOnly={false}
                type="search"
                value="测试值"
              >
                <div
                  className="za-input za-search-bar__input za-input--focus za-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value="测试值"
                  />
                  <Icon
                    className="za-input__clear"
                    onClick={[Function]}
                    prefixCls="za-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                        onClick={[Function]}
                        prefixCls="za-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar snapshot renders onClear called correctly 1`] = `
<ForwardRef(forwardRef)
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <ConfigReceiver
    forwardedRef={null}
    onClear={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onClear={
        [MockFunction] {
          "calls": Array [
            Array [
              "",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      prefixCls="za-search-bar"
      shape="radius"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--radius"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <ForwardRef(SvgSearch)
              className="za-search-bar__icon"
              size="sm"
            >
              <Icon
                className="za-search-bar__icon"
                component={[Function]}
                prefixCls="za-icon"
                size="sm"
                theme="default"
                viewBox="0 0 32 32"
              >
                <i
                  className="za-icon za-search-bar__icon za-icon--default za-icon--sm"
                  size="sm"
                  theme="default"
                >
                  <component
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 1000 1000"
                      width="1em"
                    >
                      <path
                        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
                        fillRule="nonzero"
                      />
                    </svg>
                  </component>
                </i>
              </Icon>
            </ForwardRef(SvgSearch)>
            <div
              className="za-search-bar__mock"
            >
              <InputBase
                className="za-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="za-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="za-input za-search-bar__input za-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="za-input__clear"
                    onClick={[Function]}
                    prefixCls="za-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                        onClick={[Function]}
                        prefixCls="za-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar snapshot renders onFocus called correctly 1`] = `
<ForwardRef(forwardRef)
  onFocus={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <ConfigReceiver
    forwardedRef={null}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onFocus={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round za-search-bar--focus"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <ForwardRef(SvgSearch)
              className="za-search-bar__icon"
              size="sm"
            >
              <Icon
                className="za-search-bar__icon"
                component={[Function]}
                prefixCls="za-icon"
                size="sm"
                theme="default"
                viewBox="0 0 32 32"
              >
                <i
                  className="za-icon za-search-bar__icon za-icon--default za-icon--sm"
                  size="sm"
                  theme="default"
                >
                  <component
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 1000 1000"
                      width="1em"
                    >
                      <path
                        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
                        fillRule="nonzero"
                      />
                    </svg>
                  </component>
                </i>
              </Icon>
            </ForwardRef(SvgSearch)>
            <div
              className="za-search-bar__mock"
            >
              <InputBase
                className="za-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="za-input"
                readOnly={false}
                type="search"
                value=""
              >
                <div
                  className="za-input za-search-bar__input za-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value=""
                  />
                  <Icon
                    className="za-input__clear"
                    onClick={[Function]}
                    prefixCls="za-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                        onClick={[Function]}
                        prefixCls="za-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;

exports[`SearchBar snapshot renders onSubmit called correctly 1`] = `
<ForwardRef(forwardRef)
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [
          "My new value",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <ConfigReceiver
    forwardedRef={null}
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [
            "My new value",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "取消",
          "placeholder": "搜索",
        }
      }
      localeCode="zh-CN"
      onSubmit={
        [MockFunction] {
          "calls": Array [
            Array [
              "My new value",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar za-search-bar--round za-search-bar--focus"
      >
        <form
          action="#"
          className="za-search-bar__form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar__content"
          >
            <ForwardRef(SvgSearch)
              className="za-search-bar__icon"
              size="sm"
            >
              <Icon
                className="za-search-bar__icon"
                component={[Function]}
                prefixCls="za-icon"
                size="sm"
                theme="default"
                viewBox="0 0 32 32"
              >
                <i
                  className="za-icon za-search-bar__icon za-icon--default za-icon--sm"
                  size="sm"
                  theme="default"
                >
                  <component
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable={false}
                      height="1em"
                      viewBox="0 0 1000 1000"
                      width="1em"
                    >
                      <path
                        d="M987.88 936.17l.011-.01-226.8-226.8c56.11-72.027 89.545-162.583 89.545-260.959 0-234.73-190.287-425.018-425.018-425.018C190.888 23.383.603 213.67.603 448.401.603 683.132 190.89 873.42 425.62 873.42c109.721 0 209.728-41.585 285.133-109.847l224.864 224.864.032-.032c6.723 6.952 16.127 11.292 26.558 11.292 20.417 0 36.965-16.548 36.965-36.965a36.83 36.83 0 00-11.294-26.56zM424.255 796.948c-192.937 0-349.34-156.406-349.34-349.34 0-192.933 156.403-349.338 349.34-349.338 192.933 0 349.341 156.405 349.341 349.339 0 192.933-156.408 349.339-349.341 349.339z"
                        fillRule="nonzero"
                      />
                    </svg>
                  </component>
                </i>
              </Icon>
            </ForwardRef(SvgSearch)>
            <div
              className="za-search-bar__mock"
            >
              <InputBase
                className="za-search-bar__input"
                clearable={true}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClear={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCompositionUpdate={[Function]}
                onFocus={[Function]}
                placeholder="搜索"
                prefixCls="za-input"
                readOnly={false}
                type="search"
                value="My new value"
              >
                <div
                  className="za-input za-search-bar__input za-input--focus za-input--clearable"
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onCompositionUpdate={[Function]}
                    onFocus={[Function]}
                    placeholder="搜索"
                    type="search"
                    value="My new value"
                  />
                  <Icon
                    className="za-input__clear"
                    onClick={[Function]}
                    prefixCls="za-icon"
                    size="md"
                    theme="default"
                    type="wrong-round-fill"
                    viewBox="0 0 32 32"
                  >
                    <Iconfont
                      className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                      onClick={[Function]}
                      size="md"
                      theme="default"
                      type="wrong-round-fill"
                    >
                      <Icon
                        className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                        onClick={[Function]}
                        prefixCls="za-icon"
                        size="md"
                        theme="default"
                        type="wrong-round-fill"
                        viewBox="0 0 32 32"
                      >
                        <i
                          className="za-icon za-input__clear za-icon--wrong-round-fill za-icon--default za-icon--md"
                          onClick={[Function]}
                          size="md"
                          theme="default"
                          type="wrong-round-fill"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlinkHref="#wrong-round-fill"
                            />
                          </svg>
                        </i>
                      </Icon>
                    </Iconfont>
                  </Icon>
                </div>
              </InputBase>
            </div>
          </div>
          <div
            className="za-search-bar__cancel"
            onClick={[Function]}
          >
            取消
          </div>
        </form>
      </div>
    </SearchBar>
  </ConfigReceiver>
</ForwardRef(forwardRef)>
`;
